--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -33,6 +33,7 @@ footer .container article {
 
 footer .container article section {
     height: 180px;
+    width: 500px;
 
     display: flex;
     flex-direction: column;
@@ -49,16 +50,60 @@ footer .container article section header h2 {
     text-indent: 20px;
 }
 
-footer .container article .container-agredecimentos ul {
+footer .container article section ul {
     width: 100%;
+    height: 100%;
 
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
+    justify-content: center;
 }
 
-footer .container article .container-agredecimentos ul li {
+footer .container article .container-agradecimentos ul li {
     font-size: 1.1rem;
     font-weight: 500;
     
     color: var(--color-01);
+}
+
+footer .container article .container-topicos-revolucao-pernambucana ul li {
+    color: var(--color-01);
+}
+
+footer .container article .container-topicos-revolucao-pernambucana ul li a {
+    font-size: 1.1rem;
+    font-weight: 500;
+    
+    color: var(--color-01);
+
+    text-decoration: none;
+
+    position: relative;
+}
+
+footer .container article .container-topicos-revolucao-pernambucana ul li a::after {
+    position: absolute;
+
+    content: "";
+
+    width: 0%;
+    height: 1px;
+
+    bottom: 0px;
+    left: 0px;
+
+    background-color: var(--color-01);
+
+    transition: 300ms all ease-in-out;
+}
+
+footer .container article .container-topicos-revolucao-pernambucana ul li a:hover::after {
+    width: 100%;
+}
+
+footer .container .container-copyright p {
+    color: var(--color-01);
+
+    margin: 8px;
 }
