--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,13 @@
 @import url("global.css");
 @import url("reset.css");
 @import url("font.css");
+@import url("animation.css");
 
 /* Importação CSS dos Elementos HTML */
 
 @import url("body.css");
 @import url("header.css");
+@import url("aside.css");
 @import url("main.css");
 @import url("section.css");
 @import url("footer.css");
@@ -17,3 +19,7 @@
 @import url("container-revolucao-pernambucana.css");
 @import url("container-lideres-revolucao-pernambucana.css");
 @import url("container-historia-lideres-revolucao-pernambucana.css");
+
+/* Importação CSS Resposividade */
+
+@import url("resposive.css");
