--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -33,7 +33,9 @@ footer .container article {
 
 footer .container article section {
     height: 180px;
-    width: 500px;
+    width: 100%;
+
+    max-width: 500px;
 
     display: flex;
     flex-direction: column;
@@ -58,6 +60,8 @@ footer .container article section ul {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    
+    margin-left: 20px;
 }
 
 footer .container article .container-agradecimentos ul li {
@@ -106,4 +110,6 @@ footer .container .container-copyright p {
     color: var(--color-01);
 
     margin: 8px;
+
+    text-align: center
 }
